<resources>
    <string name="app_name">Chef\'s Fork</string>
    <string name="fragment_signup_signup_label">Signup</string>
    <string name="fragment_signup_textview_username_label">Username</string>
    <string name="fragment_signup_button_signup">Signup</string>
    <string name="fragment_signup_button_back_to_login">Back to Login</string>
    <string name="fragment_signup_textview_password_hint">Password</string>
    <string name="fragment_signup_textview_confirm_password_hint">Confirm Password</string>

    <string name="hello_blank_fragment">Hello Blk Fragment</string>

    <string name="fragment_login_textview_login">Login</string>
    <string name="fragment_login_textview_username_hint">Username</string>
    <string name="fragment_login_textview_login_text">Login</string>
    <string name="fragment_login_button_go_to_signup_text">Go to Signup</string>
    <string name="fragment_login_textview_password_hint">Password</string>
    <string name="recipe_of_the_day">Recipe of the day</string>
    <string name="ready_to_cook">"Ready to cook ? "</string>
    <string name="search_bar_hint">Recipe name..</string>
    <string name="recipe_card_title">Title of recipe</string>
    <string name="recipe_card_subhead">Subhead of recipe</string>
    <string name="search_recipes">Search for recipes</string>
    <string name="txt_random_recipes">Discover more</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="remove_favorite">Remove item</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="about_app">App created by: Team 5\nVersion 1.0</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">insert username</string>
    <string name="about">About</string>
    <string name="show_more">Show more</string>
    <string name="ingredient_image">Ingredient image description</string>
    <string name="meal_image">meal image description goes here</string>
    <string name="meal_name">Meal name goes here</string>
    <string name="meal_category">Seafood • French</string>
    <string name="ingredients">Ingredients</string>
    <string name="measurements">Measurements</string>
    <string name="instructions">Instructions</string>
    <string name="recipe_instructions">Step by step instructions will appear here...</string>
    <string name="search_ingredient">ingredients</string>
    <string name="search_country">country</string>
    <string name="search_category">category</string>
    <string name="favoriteBtnDescription">Add recipe to favorites</string>
    <string name="instagram">Creator\'s Instagram</string>
    <string name="facebook">Creator\'s Facebook</string>
    <string name="app_logo">App logo</string>
    <string name="youtube">Preview</string>
    <string name="login_required">Please login to use favorites</string>
    <string name="no_meals">Only God knows why there\'s nothing here...</string>
    <string name="login">Login</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
</resources>
