<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/md_theme_primaryContainer"
    tools:context=".ui.fragments.SignupFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="92dp"
        android:text="@string/fragment_signup_signup_label"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_signup_textview_username_label"
        app:startIconDrawable="@drawable/ic_account_placeholder">

        <EditText
            android:id="@+id/fragment_signup_username"
            android:layout_width="@dimen/fragment_signup_textview_width"
            android:layout_height="@dimen/fragment_signup_textview_height"
            android:layout_gravity="center"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_signup_textview_password_hint"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_signup_password"
            android:layout_width="@dimen/fragment_signup_textview_width"
            android:layout_height="@dimen/fragment_signup_textview_height"
            android:layout_gravity="center"
            android:autofillHints="Password"
            android:ems="10"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_signup_textview_confirm_password_hint"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_signup_confirmPassword"
            android:layout_width="@dimen/fragment_signup_textview_width"
            android:layout_height="@dimen/fragment_signup_textview_height"
            android:layout_gravity="center"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fragment_signup_button_signup"
        android:layout_width="@dimen/fragment_signup_textview_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/md_theme_primary"
        android:enabled="false"
        android:onClick="onSignup"
        android:text="@string/fragment_signup_button_signup" />

</androidx.appcompat.widget.LinearLayoutCompat>